--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,6 @@ dependencies {
     compile 'com.github.tony19:logback-android-core:1.1.1-6'
     compile 'com.github.tony19:logback-android-classic:1.1.1-6'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.flurry.android:analytics:6.2.0'
     testCompile 'junit:junit:4.12'
 }
